--- a/C2 Framework/server/templates/index.html
+++ b/C2 Framework/server/templates/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head><title>C2 Log Viewer</title></head>
+<head>
+    <title>C2 Log Viewer</title>
+    <style>
+        body { font-family: Arial, sans-serif; padding: 20px; }
+        a { text-decoration: none; color: #007bff; }
+        ul { list-style-type: none; padding-left: 0; }
+    </style>
+</head>
 <body>
     <h1>C2 Log Viewer</h1>
     <ul>
-        <li><a href="/sessions">Sessions</a></li>
-        <li><a href="/commands">Commands</a></li>
-        <li><a href="/responses">Responses</a></li>
-        <li><a href="/file_transfers">File Transfers</a></li>
+        <li><a href="/sessions">View Sessions</a></li>
+        <li><a href="/commands">View Commands</a></li>
+        <li><a href="/responses">View Responses</a></li>
+        <li><a href="/file_transfers">View File Transfers</a></li>
     </ul>
 </body>
 </html>
